--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.66MB/s(Youtube:不良林), server: 120.233.186.204, port: 3382, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-339.0KB/s(Youtube:不良林), server: 103.56.62.145, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.69MB/s(Youtube:不良林), server: 103.56.62.145, port: 3382, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.90MB/s(Youtube:不良林), server: 123.59.87.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.71MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.83MB/s(Youtube:不良林), server: cn.speedabc.xyz, port: 42004, type: trojan, password: af630252-aecc-45cf-b174-5e0782396874, sni: cn.speedabc.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.87MB/s(Youtube:不良林), server: 29d78fe.nf.gladns.com, port: 3389, type: trojan, password: 8c72bafbd4837610, sni: 29d78fe.nf.gladns.com, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-7.21MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.82MB/s(Youtube:不良林), server: 120.233.186.59, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-7.79MB/s(Youtube:不良林), server: 60.249.3.227, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.90MB/s(Youtube:不良林), server: xjp001.369boy.com, port: 11001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: xjp001.369boy.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1016.3KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-150.4KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.19MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-369.0KB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.87MB/s(Youtube:不良林), server: tw7-5756.duuk.info, port: 5307, type: trojan, password: 3681e895-beb2-5114-9fa2-4cfe305291cf, sni: tw7-5756.duuk.info, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-910.3KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-2.34MB/s(Youtube:不良林), server: tj-14.t8737.shop, port: 11223, type: trojan, password: 8abe604f-d7e8-4af9-96f6-044db11ec67f, sni: tj-14.t8737.shop, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-7.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-150.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
+      - 🇮🇳 印度-369.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-910.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-7.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-150.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
+      - 🇮🇳 印度-369.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-910.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-7.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-150.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
+      - 🇮🇳 印度-369.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-910.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-7.21MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-7.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-150.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
+      - 🇮🇳 印度-369.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-910.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-7.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-150.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
+      - 🇮🇳 印度-369.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-910.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-7.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-150.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
+      - 🇮🇳 印度-369.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-910.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-339.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-7.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.79MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1016.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-150.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
+      - 🇮🇳 印度-369.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-910.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
