--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,68 +5,67 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.82MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇮🇳 印度-369.0KB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-11.25MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.18MB/s(Youtube:不良林), server: 120.233.186.59, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇺🇸 美国-910.3KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-12.06MB/s(Youtube:不良林), server: 29d78fe.nf.gladns.com, port: 3389, type: trojan, password: 8c72bafbd4837610, sni: 29d78fe.nf.gladns.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.58MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5603, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.69MB/s(Youtube:不良林), server: 120.233.186.204, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.26MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.21MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇭🇰 香港-664.3KB/s(Youtube:不良林), server: 2.tiantang.cf, port: 59195, type: trojan, password: pA52tFTlGZ, sni: 2.tiantang.cf, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.22MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-378.1KB/s(Youtube:不良林), server: jp001.369boy.com, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: jp001.369boy.com, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: dajbxus.naikonode.top, port: 15105, type: ssr, cipher: chacha20-ietf, password: NaikoCloud, protocol: auth_aes128_md5, obfs: http_simple, protocol-param: 1596:vsqvobohcqs, obfs-param: 6371f1596.microsoft.com}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇮🇳 印度-369.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-910.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-12.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
       - 🇭🇰 香港-664.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇮🇳 印度-369.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-910.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-12.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
       - 🇭🇰 香港-664.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇮🇳 印度-369.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-910.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-12.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
       - 🇭🇰 香港-664.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-12.06MB/s(Youtube:不良林)
       - 🇭🇰 香港-664.3KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -74,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇮🇳 印度-369.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-910.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-12.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
       - 🇭🇰 香港-664.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇮🇳 印度-369.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-910.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-12.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
       - 🇭🇰 香港-664.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇮🇳 印度-369.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-910.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-12.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
       - 🇭🇰 香港-664.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 🇮🇳 印度-369.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-910.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-12.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
       - 🇭🇰 香港-664.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
