--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.97MB/s(Youtube:不良林), server: tw6-5641.duuk.info, port: 5306, type: trojan, password: 3681e895-beb2-5114-9fa2-4cfe305291cf, sni: tw6-5641.duuk.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.69MB/s(Youtube:不良林), server: 120.233.186.204, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.78MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.90MB/s(Youtube:不良林), server: 116.129.253.134, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-664.3KB/s(Youtube:不良林), server: 2.tiantang.cf, port: 59195, type: trojan, password: pA52tFTlGZ, sni: 2.tiantang.cf, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-378.1KB/s(Youtube:不良林), server: jp001.369boy.com, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: jp001.369boy.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-11.25MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-201.1KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-5.98MB/s(Youtube:不良林), server: cn.speedabc.xyz, port: 42004, type: trojan, password: af630252-aecc-45cf-b174-5e0782396874, sni: cn.speedabc.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.65MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.44MB/s(Youtube:不良林), server: tw7-5756.duuk.info, port: 5307, type: trojan, password: 3681e895-beb2-5114-9fa2-4cfe305291cf, sni: tw7-5756.duuk.info, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: dajbxus.naikonode.top, port: 15105, type: ssr, cipher: chacha20-ietf, password: NaikoCloud, protocol: auth_aes128_md5, obfs: http_simple, protocol-param: 1596:vsqvobohcqs, obfs-param: 6371f1596.microsoft.com}
   - {name: 🇺🇸 美国-4.90MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇨🇳 中国-409.6KB/s(Youtube:不良林), server: dajbxus.naikonode.top, port: 15106, type: ssr, cipher: chacha20-ietf, password: NaikoCloud, protocol: auth_aes128_md5, obfs: http_simple, protocol-param: 1596:vsqvobohcqs, obfs-param: 6371f1596.microsoft.com}
+  - {name: 🇺🇸 美国-5.40MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.14MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-664.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-201.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-409.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-664.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-201.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-409.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-664.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-201.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-409.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-664.3KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-664.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-201.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-409.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-664.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-201.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-409.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-664.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-201.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-409.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-664.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-201.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.44MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-409.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
